--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -115,7 +115,6 @@
                                     <i class="layui-icon layui-icon-search"
                                        onclick="configDataTable.reload({where:{type: $('#searchType').val()}});"></i>
                                 </button>
-
                                 <button class="layui-btn layui-btn-normal layui-btn-sm" onclick="saveConfigBtn()">
                                     添加
                                 </button>
@@ -124,6 +123,7 @@
                         <!--数据表格-->
                         <table class="" id="config-table" lay-filter="config-table-filter"></table>
                     </div>
+                    <!--上传类-->
                     <div class="layui-tab-item " tab-id="3-1">
                         <div class="layui-col-sm8">
                             <div id="beanForm" class="layui-form" action="">
@@ -151,17 +151,15 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 </div>
 </body>
 <div th:include="project/projectAddTemplate.html"></div>
+<div th:include="project/projectEditTemplate.html"></div>
 <div th:include="env/envAddTemplate.html"></div>
 <div th:include="env/configAddTemplate.html"></div>
 <div th:include="common/common.html"></div>
@@ -219,16 +217,6 @@
     <a class="layui-btn layui-btn-xs" lay-event="addBranch">添加分支</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-xs" lay-event="delete">删除</a>
-</script>
-<script type="text/html" id="branch-template">
-    {{# $.each(d.branchList,(i,v)=>{ }}
-    <div class="layui-table-cell laytable-cell-1-0-3">
-        <div class="layui-col-sm6">{{v.name}}</div>
-        <div class="layui-col-sm6">
-            <i class="layui-icon layui-icon-delete" style="cursor:pointer" onclick="deleteBranch({{v.id}});"></i>
-        </div>
-    </div>
-    {{# }) }}
 </script>
 <script type="text/html" id="env-toolbar">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
